2008-02-05  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/XError.c (PrintXErrorAndCoredump):
	try to dump core the hard way

2008-02-04  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/colorset.c (parse_colorset):
	check for image != None before calling XDestroyImage

	* fvwm/ewmh_events.c (ewmh_WMStateMaxVert):
	(ewmh_WMStateMaxHoriz):
	(ewmh_WMStateModal):
	(ewmh_WMStateShaded):
	(ewmh_WMStateStaysOnTop):
	(ewmh_WMStateStaysOnBottom):
	handle the STATE_ADD command of the EWMH _NET_WM_STATE message from
	version 1.3
	also ignore the EWMH staysontop and staysonbottom hints if the
	EWMHIgnoreStackingOrderHints style is used

	* fvwm/colorset.c (parse_colorset):
	Fixed a sporadic crash when the root background set by gnome,
	fvwm-root, esetroot etc. changes and a root transparent colour set
	is used.

	* fvwm/colorset.c (parse_colorset):
	* libs/PictureUtils.c (alloc_color_dynamic_no_limit):
	* libs/Colorset.c (CreateOffsetBackgroundPixmap):
	* libs/PictureGraphics.c (PGrabXImage)
	(PGraphicsCreateTranslucent):
	use MyXGrabserver and MyXUngrabServer instead of doing the X calls
	directly!

2008-01-31  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/PictureGraphics.c (PGrabXImage):
	fixed XImage memory leak
	(PCreateRenderPixmap):
	(PCreateDitherPixmap):
	Properly handle return code of FgetFImage()

2008-01-30  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/events.c (HandleConfigureRequest):
	(events_handle_configure_request):
	cleanup

	* fvwm/ewmh_events.c (ewmh_RestackWindow):
	(ewmh_MoveResizeWindow):
	fixed crash when moving/resizing/restacking unmanaged windows through
	an ewmh message

2008-01-30  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/events.c (HandleMapRequestKeepRaised):
	fixed compiler warning

2008-01-26  Olivier  <chapuis(at)lri(dot)fr>

	* libs/FlocaleCharset.c: (FlocaleInit_X_Charset),
	(FlocaleCharsetInit), (FlocaleCharsetGetDefaultCharset):
	* NEWS: